--- a/styles/main.css
+++ b/styles/main.css
@@ -89,6 +89,7 @@ header nav ul li a {
   background-color: #fff;
   color: #3c1935;
   padding: 0.5rem 1rem;
+  text-decoration: none;
 }
 
 .btn {
@@ -107,6 +108,25 @@ header nav ul li a {
 .btn:hover {
   background-color: #333;
   color: #fff;
+}
+
+.min-nav {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.min-nav .contact-btn {
+  color: white;
+  text-decoration: none;
+}
+
+#open-menu-btn,
+#cls-menu-btn {
+  cursor: pointer;
+  font-size: 2.5rem;
+  color: white;
+  display: none;
 }
 
 footer {
@@ -155,7 +175,6 @@ footer .footer-logo {
 .footer-nav {
   display: flex;
   flex-direction: column;
-
   border-right: 1px solid #fff;
 }
 .footer-title {
@@ -232,4 +251,104 @@ footer ul li a:hover {
   text-align: center;
   margin-top: 1rem;
   color: #999;
+}
+
+@media (max-width: 1200px) {
+  body {
+    --lr-padding: 50px;
+  }
+}
+
+@media (max-width: 1000px) {
+  body {
+    --lr-padding: 30px;
+  }
+  #overlay {
+    display: block;
+  }
+  #open-menu-btn {
+    display: block;
+  }
+
+  header {
+    background-color: black;
+  }
+
+  header nav {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    z-index: 3;
+    transform: translateX(-100%);
+    background-color: black;
+    width: 100dvw;
+    height: 80vh;
+    padding: 1rem var(--lr-padding);
+    align-items: flex-end;
+    justify-content: flex-end;
+    transition: transform 0.3s ease;
+  }
+
+  header nav ul {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 2rem;
+    padding: 10px 20px;
+    height: auto;
+  }
+
+  .footer-logo img {
+    width: 80px;
+    height: 80px;
+  }
+
+  .footer-desc {
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 600px) {
+  header.transparent {
+    background: rgba(0, 0, 0, 0.9);
+  }
+  header nav {
+    height: 100vh;
+  }
+
+  .min-nav {
+    display: none;
+  }
+
+  .logo:first-child {
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .footer-logo h1 {
+    font-size: 1rem;
+  }
+
+
+  .footer-desc{
+    font-size: 0.9rem;
+  }
+  .footer-container {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .footer-container div {
+    width: 100%;
+    border: none;
+    padding: unset;
+    border-bottom: 1px solid #fff;
+  }
+
+  .footer-container div:not(:first-child) {
+    padding-left: 0rem;
+  }
+  .footer-social-links a i {
+    font-size: 1.5rem;
+  }
 }
